# hulk

./: .gitignore  .nojekyll  01-arithmetic-expressions.html  01-dual-ancestry.html  02-atomization.html  02-strings-and-builtins.html  03-structure.html  03-variables-and-binding.html  04-control-flow.html  04-evaluation.html  05-binding.html  05-functions-and-recursion.html  06-objects-and-classes.html  06-shield.html  07-lowering.html  07-type-checking-and-inference.html  08-lowering-to-banner-ir.html  08-transpiler.html  09-metal-sandbox.html  09-the-metal-sandbox.html  10-stack-machine.html  11-heap-memory.html  11-object-representation-and-heap.html  12-garbage-collector.html  12-virtual-method-calls.html  13-garbage-collector.html  13-standard-library.html  14-final-polish.html  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  TASKS.md  appendix-banner.html  appendix-hulk-syntax.html  appendix-instructors.html  appendix-tooling.html  index.html  instructors.html  intro.html  (+6 more)
.gemini/: settings.json  style-guide.md
backend/: Cargo.toml
docs/: .gitignore  01_index.md  02_expressions.md  03_functions.md  04_variables.md  05_conditionals.md  06_loops.md  07_types.md  08_typing.md  09_inference.md  10_protocols.md  11_iterables.md  12_vectors.md  _config.yml  _quarto.yml  conditionals.md  deploy.md  design.md  develop.md  expressions.md  functions.md  index.html  index.md  index.qmd  instructors.qmd  intro.html  search.json  variables.md
frontend/: main.py  pyproject.toml
frontend/src/frontend/: __init__.py  builtins.py  functions.py  lexer.py  types.py
(+186 files in other folders)
