[project]
name = "hulk"
version = "0.8.1"
description = "HULK Language Implementation"
readme = "README.md"
authors = [
    { name = "Alejandro Piad Morffis", email = "apiad@apiad.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hulk = "hulk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hulk"]
